[gd_scene load_steps=5 format=2]

[ext_resource path="res://ScoreBoard.gd" type="Script" id=1]
[ext_resource path="res://fonts/GravityBold8.ttf" type="DynamicFontData" id=5]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 5 )

[node name="ScoreBoard" type="Node2D"]
script = ExtResource( 1 )

[node name="Player1GameScore" type="Label" parent="."]
margin_left = 312.0
margin_top = 48.0
margin_right = 368.0
margin_bottom = 80.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.992157, 0.960784, 0.890196, 1 )
text = "11"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player2GameScore" type="Label" parent="."]
margin_left = 448.0
margin_top = 48.0
margin_right = 504.0
margin_bottom = 80.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.992157, 0.960784, 0.890196, 1 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player1MatchScore" type="Label" parent="."]
margin_left = 376.0
margin_top = 64.0
margin_right = 392.0
margin_bottom = 80.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.992157, 0.960784, 0.890196, 1 )
text = "4"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player2MatchScore" type="Label" parent="."]
margin_left = 424.0
margin_top = 64.0
margin_right = 440.0
margin_bottom = 80.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.992157, 0.960784, 0.890196, 1 )
text = "3"
__meta__ = {
"_edit_use_anchors_": false
}
